# javakh_interface

./: README.md  pyproject.toml
javakh_interface/: __init__.py  con_de.py  get_cp0.py  is_win.py  main.py
tests/: test_interface.py
