[project]
name = "javakh-interface"
version = "0.2.2"
description = "Compatible Khovanov interface backed by the corrected high-performance cppkh engine."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cppkh-interface>=0.2.1"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
